aggiunta un po di logica ai controller

--- a/app/views/worksresults.html
+++ b/app/views/worksresults.html
@@ -1,8 +1,6 @@
-<div>
+<div style="display: block; border-bottom: 1px solid black; padding: 15px 25%;">
     <div>
-        <input type="text" data-ng-model="exploreLast" />
-    </div>
-    <div>
-        <h5>Last and, maybe actual, work ({{exploreLast}})</h5>
+    	<h2>{{work.name}}</h2>
+        <h5>{{work.subtitle}}</h5>
     </div>
 </div>
