adesso funzionano i controller

--- a/app/views/workDetails.html
+++ b/app/views/workDetails.html
@@ -1,1 +1,6 @@
-<h1>workDetail {{workId}}</h1>
+<div style="display: block; border-bottom: 1px solid black; padding: 15px 25%;">
+    <div>
+        <h2>{{work.name}}</h2>
+        <h5>{{work.subtitle}}</h5>
+    </div>
+</div>
