--- a/app/views/worksresults.html
+++ b/app/views/worksresults.html
@@ -1,5 +1,5 @@
 <div style="display: block; border-bottom: 1px solid black; padding: 15px 25%;">
-    <div>
+    <div ng-repeat="work in allWorks">
     	<h2>{{work.name}}</h2>
         <h5>{{work.subtitle}}</h5>
     </div>
