--- a/app/views/workDetails.html
+++ b/app/views/workDetails.html
@@ -1,6 +1,6 @@
-<div md-whiteframe-z5 style="display: block; border-bottom: 1px solid black; padding: 15px 25%;">
-    <div>
-        <h2>{{work.name}}</h2>
+<div md-whiteframe-z5 layout="row" layout-align="start center" layout-padding>
+    <div flex>
+        <h3>{{work.name}}</h3>
         <h5>{{work.subtitle}}</h5>
     </div>
 </div>
