--- a/app/views/workDetailsModal.html
+++ b/app/views/workDetailsModal.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="work details" style="max-width: 600px; margin: 0 auto;">
+<md-dialog aria-label="work details" style="max-width: 600px; margin: 0 auto;" flex="90">
     <form>
         <md-toolbar>
             <div class="md-toolbar-tools">
@@ -23,7 +23,7 @@
             </div>
         </md-dialog-content>
         <div class="md-actions" layout="row">
-            <md-button href="http://en.wikipedia.org/wiki/Mango" target="_blank" hide show-md>
+            <md-button href="http://en.wikipedia.org/wiki/Mango" target="_blank" hide >
                 More on Wikipedia
             </md-button>
             <span flex></span>
